--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,4 @@ jobs:
       - run: git clone https://github.com/FajarMaftuhFadli/my-terraform.git
       - run: cd my-terraform
       - run: terraform init
+      - run: ls -la
