--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
       - run: sudo apt-get install terraform
       - run: git clone https://github.com/FajarMaftuhFadli/my-terraform.git
       - run: pwd
+      - run: cd /home/runner/work/my-terraform/my-terraform
       - run: terraform init
       - run: ls -la
