--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,8 @@ jobs:
       - run: git clone https://github.com/FajarMaftuhFadli/my-terraform.git
       - run: pwd
       - run: cd /home/runner/work/my-terraform/my-terraform
+      - run: pwd
       - run: terraform init
+      - run: pwd
       - run: ls -la
+      - run: pwd
