--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,36 @@ jobs:
   plan:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
-      - run: wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-      - run: gpg --no-default-keyring --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
-      - run: echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-      - run: sudo apt update
-      - run: sudo apt-get install terraform
-      - run: git clone https://github.com/FajarMaftuhFadli/my-terraform.git .
-      - env:
-          HUYE:${{ secrets.HUYE }}
-      - run: echo $HUYE
-        # env:
-        #   GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-      # - run: gcloud auth application-default login
+      - name: Install the terraform dependency packages
+        run: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
+      
+      - name: Install the HashiCorp GPG key
+        run: wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+      
+      - name: Verify the key's fingerprint
+        run: gpg --no-default-keyring --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
+      
+      - name: Add the official HashiCorp repository to your system
+        run: echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+      
+      - name: Download the package information from HashiCorp
+        run: sudo apt update
+        
+      - name: Install Terraform from the new repository
+        run: sudo apt-get install terraform
+        
+      - name: clone this repo
+        run: git clone https://github.com/FajarMaftuhFadli/my-terraform.git .
+        
+      - name: Set environment variable for GCP authentication
+        run: echo "$GOOGLE_APPLICATION_CREDENTIALS" > $GITHUB_ENV
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+
+      - name: Authenticate with GCP using service account
+        run: gcloud auth application-default login
+      
+      - name: Initialize terraform
       - run: terraform init
+      
       # - run: terraform plan
