--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,23 +5,23 @@ jobs:
   plan:
     runs-on: ubuntu-latest
     steps:
-      - name: Install the terraform dependency packages
-        run: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
+      #- name: Install the terraform dependency packages
+      #  run: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
       
-      - name: Install the HashiCorp GPG key
-        run: wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+      #- name: Install the HashiCorp GPG key
+      #  run: wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
       
-      - name: Verify the key's fingerprint
-        run: gpg --no-default-keyring --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
+      #- name: Verify the key's fingerprint
+      #  run: gpg --no-default-keyring --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
       
-      - name: Add the official HashiCorp repository to your system
-        run: echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+      #- name: Add the official HashiCorp repository to your system
+      #  run: echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
       
-      - name: Download the package information from HashiCorp
-        run: sudo apt update
+      #- name: Download the package information from HashiCorp
+      #  run: sudo apt update
         
-      - name: Install Terraform from the new repository
-        run: sudo apt-get install terraform
+      #- name: Install Terraform from the new repository
+      #  run: sudo apt-get install terraform
         
       - uses: actions/checkout@v3
         
