--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,24 +8,8 @@ jobs:
       id-token: 'write'
     runs-on: ubuntu-latest
     steps:
-      #- name: Install the terraform dependency packages
-      #  run: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
-      
-      #- name: Install the HashiCorp GPG key
-      #  run: wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-      
-      #- name: Verify the key's fingerprint
-      #  run: gpg --no-default-keyring --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
-      
-      #- name: Add the official HashiCorp repository to your system
-      #  run: echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-      
-      #- name: Download the package information from HashiCorp
-      #  run: sudo apt update
-        
-      #- name: Install Terraform from the new repository
-      #  run: sudo apt-get install terraform
-        
+      - uses: hashicorp/setup-terraform@v2
+
       - uses: actions/checkout@v3
       
       - id: 'auth'
@@ -34,7 +18,20 @@ jobs:
         with:
           credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
 
-      - name: Initialize terraform
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
+
+      - name: Terraform Init
+        id: init
         run: terraform init
-      
-      - run: terraform plan
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: true
