--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,8 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
-        continue-on-error: true
+        run: terraform plan -no-color -out "the-plan"
+      
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply "the-plan" -no-color
