--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
       
       - name: Terraform Apply
         id: apply
-        run: terraform apply "the-plan" -no-color -auto-approve
+        run: terraform apply "the-plan" -no-color
